<resources>
    <string name="app_name" translatable="false">Popular Movies 2</string>

    <!-- Text to display in the list when there are no movies [CHAR LIMIT=NONE] -->
    <string name="no_movies">No movies found</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <string name="lorem">ipsum dolor sit amet, consectetur adipisicing elit. Suscipit mollitia maiores voluptas numquam at nisi ex veniam quod distinctio quae. Ducimus at enim, beatae, aliquid sapiente dolorem asperiores pariatur animi.</string>


    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <!-- Settings Menu Item used to open Settings  -->
    <string name="action_settings">Settings</string>
    <string name="settings_activity_title">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Movie Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label_2">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>

    <!-- Value in SharedPreferences for order default value -->
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>

    <!-- Label and value for sorting [CHAR LIMIT=20] -->
    <string name="settings_sorting_label">Sorting</string>
    <string name="settings_sorting_key" translatable="false">sorting</string>

    <!-- Label and value for order-by popular option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_popular_label">Most Popular</string>
    <string name="settings_order_by_most_popular_value" translatable="false">popular</string>

    <!-- Label and value for order-by most top_rated option [CHAR LIMIT=20] -->
    <string name="settings_order_by_top_rated_label">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top_rated</string>

    <!-- Label and value for favorites option [CHAR LIMIT=20] -->
    <string name="settings_favorites_label">Favorites</string>
    <string name="settings_favorites_value" translatable="false">favorites</string>

    <string name="uri_builder_api_key" translatable="false">api_key</string>

    <!-- settings locale in_main.xml menu file array texts -->
    <string name="settings_locale_label">Locale (TheMovieDB)</string>
    <string name="settings_locale_label_enGB">English (GB)</string>
    <string name="settings_locale_label_enUS">English (USA)</string>
    <string name="settings_locale_label_frFR">French (France)</string>
    <string name="settings_locale_label_deDE">German (Germany)</string>
    <string name="settings_locale_label_itIT">Italian</string>
    <string name="settings_locale_label_esES">Spanish (Spain)</string>

    <string name="settings_locale_key" translatable="false">locale</string>
    <string name="settings_locale_enGB_value" translatable="false">en-GB</string>
    <string name="settings_locale_enUS_value" translatable="false">en-US</string>
    <string name="settings_locale_frFR_value" translatable="false">fr-FR</string>
    <string name="settings_locale_deDE_value" translatable="false">de-DE</string>
    <string name="settings_locale_itIT_value" translatable="false">it-IT</string>
    <string name="settings_locale_esES_value" translatable="false">es-ES</string>

    <string name="settings_locale_default" translatable="false">en-US</string>


    <!-- Error messages -->
    <string name="detail_error_message">Movie data not available</string>
    <string name="no_data">No data</string>

    <!-- Lifetime and Bundle -->
    <string name="parcel_movie">PARCEL_MOVIE</string>

    <!-- activity_movie texts  -->
    <string name="title_activity_detail">Movie Detail</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="synopsis">Synopsis</string>
    <string name="separator">separator</string>
    <string name="poster_image">poster image</string>
    <string name="separator_horizontal">separatorHorizontal</string>



    <!-- TODO: PROVISIONAL - REFACTOR -->

    <string name="filter_label_popularmovies" translatable="false">@string/app_name</string>
    <string name="sorting_fab_label">Sorting</string>

    <string name="selected_configuration" translatable="false">default_value</string>
    <string name="default_value" translatable="false">default_value</string>
    <string name="large" translatable="false">large</string>
    <string name="large_land" translatable="false">large_land</string>
    <string name="xlarge" translatable="false">xlarge</string>
    <string name="xlarge_land" translatable="false">xlarge_land</string>

    <string name="sort_favorites">Your Favorites</string>
    <string name="poster_image_alt">Poster Image</string>
    <string name="backdrop_image_alt">Backdrop Image</string>
    <string name="favourite_icon_alt">Favourite/Un-favourite</string>

    <string name="movie_detail_vote_average">Vote Average: </string>
    <string name="movie_detail_release_date">Release Date: </string>
    <string name="movie_detail_overview">Overview:&#160;</string>
    <string name="movie_favorite_on_toast_msg">Movie set as Favourite!</string>
    <string name="movie_favorite_off_toast_msg">Movie removed from Favorites&#8230;</string>
    <string name="movie_detail_video_thumbnail_label">Youtube Trailer</string>
    <string name="movie_detail_video_thumbnail_error_label">Youtube Trailer Error</string>
    <string name="movie_detail_collapse">collapse</string>
    <string name="movie_detail_show_more">show more</string>
    <string name="movie_detail_review_by">Review by:&#160;</string>
    <string name="movie_detail_youtube_vendor" translatable="false">vnd.youtube:</string>
    <string name="movie_detail_youtube_video_link" translatable="false">http://www.youtube.com/watch?v=</string>
    <string name="movie_detail_youtube_thumbnail_service" translatable="false">http://img.youtube.com/vi/#/0.jpg"</string>

    <string name="error_message">An error has occurred. Please try again by swiping down</string>
    <string name="error_no_connectivity">Your device is not connected to the Internet, please check your connection and swipe down to refresh</string>
    <string name="error_moviedb_list">Error from the MovieDB Service. Swipe down to try again</string>
    <string name="error_movie_poster">Error loading the poster, sorry!</string>
    <string name="error_no_favorites">You have no favorite movies, use the Star icon to set a movie as favourite in the detailed movie screen.</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
