<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label_2" />

    <ListPreference
        android:defaultValue="@string/settings_locale_default"
        android:entries="@array/settings_locale_labels"
        android:entryValues="@array/settings_locale_values"
        android:key="@string/settings_locale_key"
        android:title="@string/settings_locale_label"
        />

</PreferenceScreen>

